--- a/apps/docs/src/app/docs/tryon-example/page.mdx
+++ b/apps/docs/src/app/docs/tryon-example/page.mdx
@@ -3,9 +3,11 @@ import { TryonExample } from "../../(components)/examples/TryonExample";
 
 # Tryon Example
 
-<Demo>
-  <TryonExample />
-</Demo>
+**Assets needed**
+
+1. [glasses](/glasses.glb), [ear occluder](/ear_occluder.glb), [preview image](/previews/glasses.png)
+2. [cap](/baseball_cap_ny.glb), [cap occluder](/baseball_cap_ny_occluder.glb), [preview image](/previews/cap.png)
+3. [hat](/wizard_hat.glb), [cap occluder](/wizard_hat_occluder.glb), [preview image](/previews/wizard_hat.png)
 
 ```tsx
 "use client";
@@ -30,20 +32,20 @@ import { Suspense, useState } from "react";
 const faceProps = [
   {
     name: "Glasses",
-    modelPath: "/new_3d/transformed/glasses.glb",
-    occluderPath: "/new_3d/reference/ear_occluder.glb",
+    modelPath: "/glasses.glb",
+    occluderPath: "/ear_occluder.glb",
     imagePath: "/previews/glasses.png",
   },
   {
     name: "Cap",
-    modelPath: "/new_3d/transformed/baseball_cap_ny.glb",
-    occluderPath: "/new_3d/transformed/baseball_cap_ny_occluder.glb",
+    modelPath: "/baseball_cap_ny.glb",
+    occluderPath: "/baseball_cap_ny_occluder.glb",
     imagePath: "/previews/cap.png",
   },
   {
     name: "Wizard Hat",
-    modelPath: "/new_3d/transformed/wizard_hat.glb",
-    occluderPath: "/new_3d/transformed/wizard_hat_occluder.glb",
+    modelPath: "/wizard_hat.glb",
+    occluderPath: "/wizard_hat_occluder.glb",
     imagePath: "/previews/wizard_hat.png",
   },
 ];
@@ -56,7 +58,7 @@ export function TryonExample() {
   const prop = faceProps[index];
 
   return (
-    <div style={{ position: "relative" }}>
+    <div style={{ position: "relative", width: "100%", padding: "1rem" }}>
       <video
         ref={setVideo}
         autoPlay
