--- a/apps/docs/src/app/docs/code-walkthrough/page.mdx
+++ b/apps/docs/src/app/docs/code-walkthrough/page.mdx
@@ -35,7 +35,7 @@ export function SimpleExample() {
   const faces = useFaces(provider);
 
   return (
-    <div style={{ position: "relative" }}>
+    <div style={{ position: "relative", width: "100%", padding: "1rem" }}>
       <video
         ref={setVideo}
         autoPlay
@@ -57,14 +57,8 @@ export function SimpleExample() {
             {faces.map((face, i) => (
               <Suspense key={i} fallback={null}>
                 <FaceOccluder face={face} />
-                <GLTFFaceProp
-                  face={face}
-                  modelPath="/new_3d/transformed/glasses.glb"
-                />
-                <GLTFOccluder
-                  face={face}
-                  modelPath="/new_3d/reference/ear_occluder.glb"
-                />
+                <GLTFFaceProp face={face} modelPath="/glasses.glb" />
+                <GLTFOccluder face={face} modelPath="/ear_occluder.glb" />
               </Suspense>
             ))}
           </CoverFit>
@@ -265,7 +259,7 @@ export function SimpleExample() {
   const faces = useFaces(provider);
 
   return (
-    <div style={{ position: "relative" }}>
+    <div style={{ position: "relative", width: "100%", padding: "1rem" }}>
       <video
         ref={setVideo}
         autoPlay
@@ -345,11 +339,8 @@ After all this work now we only need to display the result.
   faces.map((face, i) => (
     <Suspense key={i} fallback={null}>
       <FaceOccluder face={face} />
-      <GLTFFaceProp face={face} modelPath="/new_3d/transformed/glasses.glb" />
-      <GLTFOccluder
-        face={face}
-        modelPath="/new_3d/reference/ear_occluder.glb"
-      />
+      <GLTFFaceProp face={face} modelPath="/glasses.glb" />
+      <GLTFOccluder face={face} modelPath="/ear_occluder.glb" />
     </Suspense>
   ));
 }
