--- a/apps/docs/src/app/docs/getting-started/page.mdx
+++ b/apps/docs/src/app/docs/getting-started/page.mdx
@@ -20,8 +20,8 @@ npm i face-tryon-core face-tryon-react
 
 ### 3. Place 3d model, occluder model, and task in public directory
 
-1. Download [Glasses Model](/new_3d/transformed/glasses.glb). and place it in public directory of your code.
-2. Download [Ear Occluder](/new_3d/reference/ear_occluder.glb). and place it in public directory of your code.
+1. Download [Glasses Model](/glasses.glb). and place it in public directory of your code.
+2. Download [Ear Occluder](/ear_occluder.glb). and place it in public directory of your code.
 3. Download [Face Landmarker Task](/face_landmarker.task) and place it in public directory of your code.
 
 <Callout type="info">
@@ -54,7 +54,7 @@ export function SimpleExample() {
   const faces = useFaces(provider);
 
   return (
-    <div style={{ position: "relative" }}>
+    <div style={{ position: "relative", width: "100%", padding: "1rem" }}>
       <video ref={setVideo} style={{ display: "none" }} autoPlay muted />
       <div style={{ width: "100%", height: 500 }}>
         <Canvas
@@ -74,14 +74,8 @@ export function SimpleExample() {
             {faces.map((face, i) => (
               <Suspense key={i} fallback={null}>
                 <FaceOccluder face={face} />
-                <GLTFFaceProp
-                  face={face}
-                  modelPath="/new_3d/transformed/glasses.glb"
-                />
-                <GLTFOccluder
-                  face={face}
-                  modelPath="/new_3d/reference/ear_occluder.glb"
-                />
+                <GLTFFaceProp face={face} modelPath="/glasses.glb" />
+                <GLTFOccluder face={face} modelPath="/ear_occluder.glb" />
               </Suspense>
             ))}
           </CoverFit>
